tests/snapshots/run_wpt_conformance__litert_per-tensor_quantizeLinear_for_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js per-tensor quantizeLinear for float16 4D tensor, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: QuantizeLinear { input: 0, scale: 1, zero_point: Some(2), options: Some(MLOperatorOptions { label: "" }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1, 1, 2, 2] @bytes([123, 52, 158, 68, 123, 52, 158, 68]);
    operand_2: u8[1, 1, 2, 2] @bytes([128, 128, 128, 128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
