tests/snapshots/run_wpt_conformance__litert_pow_float16_2D_base_tensor_and_2D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pow.https.any.js pow float16 2D base tensor and 2D integer exponent tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[4, 6];
    inputB: f16[4, 6];
  }

  nodes {
    [output] = pow(inputA, inputB, label="");
  }

  outputs { output; }
}
